# payments-api

./: .gitignore  README.md  pyproject.toml  renovate.json
.github/scripts/: llm_review.py  select_tests.sh
.github/workflows/: ai-review.yml  ci.yml
app/: main.py
app/routers/: payments.py  webhooks.py
app/services/: webhook.py
k8s/: analysis-template.yaml  rollout.yaml  service.yaml
tests/: conftest.py  test_payments.py  test_webhooks.py
